Update and rename ErrorMessage.scss to Error Message.scss
Signed-off-by: بلال مسلوب <mesloubi2021@gmail.com>

--- a/src/components/ErrorMessag/Error Message.scss
+++ b/src/components/ErrorMessag/Error Message.scss
@@ -1,4 +1,4 @@
-.error-message {
+error-message {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +18,7 @@
   }
 }
 
-.primary-btn {
+primary-btn {
   cursor: pointer;
   background-color: #a6def4;
   color: #07384a;
