--- a/src/components/LoadingAnimation/LoadingAnimation.scss
+++ b/src/components/LoadingAnimation/LoadingAnimation.scss
@@ -1,5 +1,5 @@
 /* Absolute Center Spinner */
-.loading {
+loading {
   position: fixed;
   z-index: 999;
   height: 2em;
@@ -13,7 +13,7 @@
 }
 
 /* Transparent Overlay */
-.loading:before {
+loading:before {
   content: "";
   display: block;
   position: fixed;
@@ -25,7 +25,7 @@
 }
 
 /* :not(:required) hides these rules from IE9 and below */
-.loading:not(:required) {
+loading:not(:required) {
   /* hide "loading..." text */
   font: 0/0 a;
   color: transparent;
@@ -34,7 +34,7 @@
   border: 0;
 }
 
-.loading:not(:required):after {
+loading:not(:required):after {
   content: "";
   display: block;
   font-size: 10px;
