Update and rename Page404.tsx to Page 404.css
Signed-off-by: بلال مسلوب <mesloubi2021@gmail.com>

--- a/src/components/Page404/Page 404.css
+++ b/src/components/Page404/Page 404.css
@@ -1,4 +1,4 @@
-import { ErrorMessage } from "../ErrorMessag/ErrorMessage";
+import { Error Message } from "../Error Messag/Error Message";
 
 export const Page404 = () => {
   return (
