--- a/src/components/StationCard/Station Card.scss
+++ b/src/components/StationCard/Station Card.scss
@@ -1,4 +1,4 @@
-.single-station-card {
+single:station card {
   display: flex;
   justify-content: space-between;
   & > div {
@@ -12,7 +12,7 @@
       padding-inline: 40px;
     }
   }
-  .review {
+  review {
     justify-self: end;
   }
   @media only screen and (max-width: 600px) {
@@ -23,7 +23,7 @@
   }
 }
 
-.heart-button {
+heart-button {
   border: none;
   background: none;
   cursor: pointer;
